--- a/HighPerformanceTests/HighPerformanceTests.csproj
+++ b/HighPerformanceTests/HighPerformanceTests.csproj
@@ -62,6 +62,8 @@
     <Compile Include="Sacks\Knapsack3.cs" />
     <Compile Include="Sacks\Knapsack2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Textbook\Chapter07Tests\BinAddFloatArayTaskTests.cs" />
+    <Compile Include="Textbook\Chapter07Tests\BinAddFloatArrayLazyTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
