--- a/HighPerformance/HighPerformance.csproj
+++ b/HighPerformance/HighPerformance.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Textbook\Chapter07\BinAddFloatArayTask.cs" />
     <Compile Include="Textbook\Chapter07\BinAddFloatArrayLazy.cs" />
+    <Compile Include="Textbook\Chapter07\WarshallBlocking.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
