--- a/HighPerformanceTests/HighPerformanceTests.csproj
+++ b/HighPerformanceTests/HighPerformanceTests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Textbook\Chapter07Tests\BinAddFloatArayTaskTests.cs" />
     <Compile Include="Textbook\Chapter07Tests\BinAddFloatArrayLazyTests.cs" />
     <Compile Include="Textbook\Chapter07Tests\WarshallBlockingTest.cs" />
+    <Compile Include="Textbook\Chapter07Tests\WarshallC1Tests.cs" />
     <Compile Include="Textbook\Chapter07Tests\WarshallDfsTests.cs" />
   </ItemGroup>
   <ItemGroup>
