--- a/HighPerformance/HighPerformance.csproj
+++ b/HighPerformance/HighPerformance.csproj
@@ -46,8 +46,15 @@
     <Compile Include="Messaging\MessageServer.cs" />
     <Compile Include="Messaging\MessageServerDispatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Textbook\Chapter03\Buffer.cs" />
+    <Compile Include="Textbook\Chapter03\BufferQueue.cs" />
+    <Compile Include="Textbook\Chapter03\FileCopyReader1.cs" />
+    <Compile Include="Textbook\Chapter03\FileCopyWriter1.cs" />
+    <Compile Include="Textbook\Chapter03\Pool.cs" />
+    <Compile Include="Textbook\Chapter06\ShellsortBarrier.cs" />
     <Compile Include="Textbook\Chapter07\BinAddFloatArayTask.cs" />
     <Compile Include="Textbook\Chapter07\BinAddFloatArrayLazy.cs" />
+    <Compile Include="Textbook\Chapter06\LongestCommonSubsequence.cs" />
     <Compile Include="Textbook\Chapter07\WarshallBlocking.cs" />
     <Compile Include="Textbook\Chapter07\WarshallC1.cs" />
     <Compile Include="Textbook\Chapter07\WarshallDfs.cs" />
