--- a/HighPerformanceTests/HighPerformanceTests.csproj
+++ b/HighPerformanceTests/HighPerformanceTests.csproj
@@ -61,8 +61,11 @@
     <Compile Include="Sacks\Knapsack3.cs" />
     <Compile Include="Sacks\Knapsack2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Textbook\Chapter03\FileCopyTests.cs" />
+    <Compile Include="Textbook\Chapter06Tests\ShellsortBarrierTests.cs" />
     <Compile Include="Textbook\Chapter07Tests\BinAddFloatArayTaskTests.cs" />
     <Compile Include="Textbook\Chapter07Tests\BinAddFloatArrayLazyTests.cs" />
+    <Compile Include="Textbook\Chapter06Tests\LongestCommonSubsequenceTests.cs" />
     <Compile Include="Textbook\Chapter07Tests\WarshallBlockingTest.cs" />
     <Compile Include="Textbook\Chapter07Tests\WarshallC1Tests.cs" />
     <Compile Include="Textbook\Chapter07Tests\WarshallDfsTests.cs" />
@@ -76,6 +79,7 @@
       <Name>HighPerformance</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
